--- a/tests/ServiceStack.CefGlue.Win64.AspNetCore/index.html
+++ b/tests/ServiceStack.CefGlue.Win64.AspNetCore/index.html
@@ -2,15 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test Page</title>
 </head>
 <body>
 
-    <h1>Heading</h1>
-
-    <p>
-        Test 'X-Frame-Options'
-    </p>
+    <h1>X-Frame-Options Proxy Test</h1>
 
     <iframe src="/theverge" style="width:100%; height:800px;" frameborder="0"></iframe>
 
