--- a/tests/ServiceStack.CefGlue.Win64.AspNetCore/index.html
+++ b/tests/ServiceStack.CefGlue.Win64.AspNetCore/index.html
@@ -9,5 +9,8 @@
 
     <iframe src="/theverge" style="width:100%; height:800px;" frameborder="0"></iframe>
 
+    <p><a href="https://servicestack.net" target="_blank">open in _blank</a></p>
+    <p><a href="javascript:window.open('https://servicestack.net')">window.open()</a></p>
+
 </body>
 </html>
